--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,3 @@
 # Replace login.42.fr by mde-sa--.login.pt ?
 # Check Makefile variables
-
+# Watch out for clean rule. Won't work after a make prune...
